Prevent page layout from jerking as Pokémon portrait loads.
Would also be nice to offer smaller sizes of these...

--- a/porygo_nz/static/porygo-nz.css
+++ b/porygo_nz/static/porygo-nz.css
@@ -634,7 +634,8 @@ div#pokemon-portrait {
 }
 
 div#pokemon-portrait > img {
-    max-width: 10rem;
+    width: 10rem;
+    height: 10rem;
     background: url(/static/circle.svg) center/100% no-repeat;
 }
 
